--- a/server/package.json
+++ b/server/package.json
@@ -12,15 +12,21 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
     "postgres": "^3.4.4"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.5.2",
     "drizzle-kit": "^0.24.2",
     "nodemon": "^3.1.4",
