--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
-    "postgres": "^3.4.4"
+    "postgres": "^3.4.4",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
@@ -28,6 +29,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.5.2",
+    "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.24.2",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
